[FIX] mail: discuss sidebar IM status no cut on Firefox
Follow-up of https://github.com/odoo/odoo/pull/201984

PR above made a few style improvements in discuss sidebar,
such as increasing the size of avatars and IM status to
match the channel member list.

Since the avatars are bigger and therefore are close to border,
there's a 1px vertical margin to prevent cutting IM status.
However this works in chromium-based browsers but not Firefox:
the position of IM status is slightly off by 1 pixel vertically
for some reasons, which makes the IM status cut slightly on the
bottom.

This commit fixes the issue by increasing vertical margin from
1px to 2px. This increases a bit the size of each item as a result,
but thankfully it's minor drawback compared to cut IM status on
Firefox.

--- a/addons/mail/static/src/core/common/core.scss
+++ b/addons/mail/static/src/core/common/core.scss
@@ -56,6 +56,11 @@ $o-discuss-talkingColor: lighten($success, 10%);
     gap: map-get($spacers, 1) / 2;
 }
 
+.o-my-0_5 {
+    margin-top: map-get($spacers, 1) / 2;
+    margin-bottom: map-get($spacers, 1) / 2;
+}
+
 .o-py-0_5 {
     padding-top: map-get($spacers, 1) / 2;
     padding-bottom: map-get($spacers, 1) / 2;
